# narumincho-com

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  firebase.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  update.ps1
.github/: dependabot.yml
.github/workflows/: deploy.yml  deploy_functions.yml  deploy_hosting.yml  main.yml  pull_request_test.yml
client/: app.tsx  enemyStarGroup.tsx  lib.ts  main.ts  main.tsx  moveStar.tsx  myStar.tsx  predictionOrbit.tsx  time.tsx  vector2.ts
common/: main.ts
distribution/definy/: spec.html
distribution/powershell/: file_recursion.html
distribution/svg/: basic.html  draw.html  standalone_embed.html
distribution/test/: scrollbar.html
functions/: main.ts  test.js
n-gen-html/: Cargo.toml
n-gen-html/src/: data.rs  lib.rs  to_string.rs
narumincho_com/: Cargo.toml
narumincho_com/src/: data.rs  main.rs  resource.rs
nview/: Cargo.toml
nview/src/: lib.rs
pages/: _app.tsx  index.tsx
pages/api/: [path].ts
source/: index.ts  main.ts  package-lock.json  package.json  tsconfig.json  type.ts
source/assets/: style.css
source/page/: 404.ts  about.ts  desiredRoute.ts  index.ts  petitcom.ts  will.ts  window.ts
source/page/desiredRoute/: about.ts  window.ts
source/script/: star.ts  tsconfig.json
src/: main.rs  nview.rs
start/: Cargo.toml
start/src/: main.rs
