[package]
name = "narumincho_com"
version = "0.1.0"
authors = ["narumincho <narumincho.starfy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["full"] }
tokio = { version = "1.0.2", features = ["full"] }
http = "0.2.3"
chrono = "0.4.19"
