[package]
name = "narumincho_com"
version = "0.1.0"
authors = ["narumincho <narumincho.starfy@gmail.com>"]
edition = "2018"
build = "build/main.rs"

[dependencies]
hyper = { version = "0.14.2", features = ["full"] }
tokio = { version = "1.0.2", features = ["full"] }
http = "0.2.3"
chrono = "0.4.19"
sha2 = "0.9.2"
hex = "0.4.2"
nview = { path = "../nview" }

[build-dependencies]
chrono = "0.4.19"
sha2 = "0.9.2"
hex = "0.4.2"
